@@ -45,7 +45,9 @@ $listDirn	= $this->escape($this->state->get('list.direction'));
 			</tr>
 		</tfoot>
 		<tbody>
-		<?php foreach($this->items as $i=>$item):?>
+		<?php foreach($this->items as $i=>$item):
+			$client	= $item->client_id ? JText::_('JADMINISTRATOR') : JText::_('JSITE');
+		?>
 			<tr class="row<?php echo $i%2; ?>">
 				<td><?php echo JHtml::_('grid.id', $i, $item->update_id); ?></td>
 				<td>
@@ -59,7 +61,7 @@ $listDirn	= $this->escape($this->state->get('list.direction'));
 				<td><?php echo JText::_('COM_INSTALLER_TYPE_' . $item->type) ?></td>
 				<td class="center"><?php echo $item->version ?></td>
 				<td class="center"><?php echo @$item->folder != '' ? $item->folder : JText::_('COM_INSTALLER_TYPE_NONAPPLICABLE'); ?></td>
-				<td class="center"><?php echo @$item->client != '' ? JText::_('COM_INSTALLER_TYPE_' . $item->client) : JText::_('COM_INSTALLER_TYPE_NONAPPLICABLE'); ?></td>
+				<td class="center"><?php echo $client; ?></td>
 				<td><?php echo $item->detailsurl ?></td>
 			</tr>
 		<?php endforeach;?>
